--- a/assets/framework/css/bootstrap-utilities.rtl.css
+++ b/assets/framework/css/bootstrap-utilities.rtl.css
@@ -5,7 +5,7 @@
  */
 :root,
 [data-bs-theme=light] {
-    --bs-blue: #0d6efd;
+    --bs-blue: #ffabff;
     --bs-indigo: #6610f2;
     --bs-purple: #6f42c1;
     --bs-pink: #d63384;
@@ -14,7 +14,7 @@
     --bs-yellow: #ffc107;
     --bs-green: #198754;
     --bs-teal: #20c997;
-    --bs-cyan: #0dcaf0;
+    --bs-cyan: #ea50ea;
     --bs-black: #000;
     --bs-white: #fff;
     --bs-gray: #6c757d;
@@ -28,7 +28,7 @@
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
-    --bs-primary: #0d6efd;
+    --bs-primary: #b600b0;
     --bs-secondary: #6c757d;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
